--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id" class="h-full">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     <style>
         body {
             box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         .gradient-bg {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -28,9 +29,12 @@
             opacity: 1;
             transform: translateY(0);
         }
+        .progress-bar {
+            transition: width 0.5s ease-in-out;
+        }
     </style>
 </head>
-<body class="h-full bg-gray-50 font-sans">
+<body class="h-full bg-gray-50">
     <!-- Navigation -->
     <nav class="gradient-bg shadow-lg sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -45,6 +49,7 @@
                         <a href="#beranda" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-sm font-medium transition-colors">Beranda</a>
                         <a href="#visi-misi" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-sm font-medium transition-colors">Visi & Misi</a>
                         <a href="#struktur" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-sm font-medium transition-colors">Struktur</a>
+                        <a href="#berita" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-sm font-medium transition-colors">Berita</a>
                         <a href="#program" class="text-white hover:text-gray-200 px-3 py-2 rounded-md text-sm font-medium transition-colors">Program Kerja</a>
                     </div>
                 </div>
@@ -62,6 +67,7 @@
                 <a href="#beranda" class="text-white hover:text-gray-200 block px-3 py-2 rounded-md text-base font-medium">Beranda</a>
                 <a href="#visi-misi" class="text-white hover:text-gray-200 block px-3 py-2 rounded-md text-base font-medium">Visi & Misi</a>
                 <a href="#struktur" class="text-white hover:text-gray-200 block px-3 py-2 rounded-md text-base font-medium">Struktur</a>
+                <a href="#berita" class="text-white hover:text-gray-200 block px-3 py-2 rounded-md text-base font-medium">Berita</a>
                 <a href="#program" class="text-white hover:text-gray-200 block px-3 py-2 rounded-md text-base font-medium">Program Kerja</a>
             </div>
         </div>
@@ -141,15 +147,15 @@
             </div>
             <div class="section-fade">
                 <!-- Pembina OSIS -->
-                <div class="text-center">
-                    <div class="bg-gradient-to-r from-red-600 to-violet-600 text-white p-6 rounded-2xl shadow-lg">
+                <div class="text-center mb-12">
+                    <div class="bg-gradient-to-r from-red-600 to-violet-600 text-white p-6 rounded-2xl shadow-lg inline-block">
                         <h3 class="text-xl font-bold">Pembina OSIS</h3>
                         <p class="text-lg mt-2">Dra. Hj. Iba Sabirin</p>
                     </div>
                 </div>
 
                 <!-- Pengurus Inti -->
-                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12 mt-8">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12">
                     <!-- Ketua OSIS -->
                     <div class="text-center">
                         <div class="bg-gradient-to-r from-purple-600 to-blue-600 text-white p-6 rounded-2xl shadow-lg">
@@ -261,8 +267,78 @@
         </div>
     </section>
 
+    <!-- Berita Section -->
+    <section id="berita" class="py-20 bg-gray-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16 section-fade">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Berita Terkini</h2>
+                <div class="w-24 h-1 bg-purple-600 mx-auto mb-6"></div>
+                <p class="text-xl text-gray-600">Update terbaru kegiatan dan informasi dari OSIS</p>
+            </div>
+            
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <!-- Berita 1 - Default -->
+<div class="bg-white rounded-2xl shadow-lg card-hover section-fade">
+    <div class="bg-gradient-to-r from-purple-500 to-blue-500 h-48 rounded-t-2xl flex items-center justify-center">
+        <span class="text-white text-4xl">📢</span>
+    </div>
+    <div class="p-6">
+        <div class="flex items-center mb-3">
+            <span class="bg-purple-100 text-purple-600 text-sm px-3 py-1 rounded-full">Pengumuman</span>
+            <span class="text-gray-500 text-sm ml-3">15 Des 2024</span>
+        </div>
+        <h3 class="text-xl font-bold text-gray-900 mb-3">Pemilihan Ketua dan Wakil Ketua OSIS Periode 2025/2026</h3>
+        <p class="text-gray-600 mb-4">Hasil pemilihan ketua dan wakil ketua OSIS telah diumumkan. Pasangan calon 03 meraih suara 82,8%.</p>
+        <a href="https://docs.google.com/document/d/1nN2Q1s_5qcaqjirOf6OT8Yhsezh8y1yAYiSPjz4DCHo/edit?usp=drivesdk" target="_blank" class="text-purple-600 font-semibold hover:text-purple-700 transition-colors">Baca Selengkapnya →</a>
+    </div>
+</div>
+
+                <!-- Berita 2 -->
+                <div class="bg-white rounded-2xl shadow-lg card-hover section-fade">
+                    <div class="bg-gradient-to-r from-green-500 to-teal-500 h-48 rounded-t-2xl flex items-center justify-center">
+                        <span class="text-white text-4xl">📅</span>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center mb-3">
+                            <span class="bg-green-100 text-green-600 text-sm px-3 py-1 rounded-full">Pengumuman</span>
+                            <span class="text-gray-500 text-sm ml-3">12 Des 2024</span>
+                        </div>
+                        <h3 class="text-xl font-bold text-gray-900 mb-3">Jadwal Kegiatan Akhir Tahun 2024</h3>
+                        <p class="text-gray-600 mb-4">OSIS telah menyusun serangkaian kegiatan menarik untuk menyambut akhir tahun 2024.</p>
+                        <a href="#" class="text-purple-600 font-semibold hover:text-purple-700 transition-colors">Baca Selengkapnya →</a>
+                    </div>
+                </div>
+
+                <!-- Berita 3 -->
+                <div class="bg-white rounded-2xl shadow-lg card-hover section-fade">
+                    <div class="bg-gradient-to-r from-orange-500 to-red-500 h-48 rounded-t-2xl flex items-center justify-center">
+                        <span class="text-white text-4xl">🏆</span>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center mb-3">
+                            <span class="bg-blue-100 text-blue-600 text-sm px-3 py-1 rounded-full">Prestasi</span>
+                            <span class="text-gray-500 text-sm ml-3">10 Des 2024</span>
+                        </div>
+                        <h3 class="text-xl font-bold text-gray-900 mb-3">Siswa SMA Negeri 6 Medan Raih Juara Olimpiade</h3>
+                        <p class="text-gray-600 mb-4">Dua siswa berhasil meraih medali emas dalam olimpiade sains tingkat kota Medan.</p>
+                        <a href="#" class="text-purple-600 font-semibold hover:text-purple-700 transition-colors">Baca Selengkapnya →</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-12 section-fade">
+                <a href="#" class="bg-purple-600 text-white px-8 py-3 rounded-full font-semibold hover:bg-purple-700 transition-colors inline-flex items-center">
+                    Lihat Semua Berita
+                    <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Program Kerja Section -->
-    <section id="program" class="py-20 bg-gray-50">
+    <section id="program" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16 section-fade">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Program Kerja OSIS</h2>
@@ -398,9 +474,9 @@
                                 <path d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z" />
                             </svg>
                         </a>
-                        <a href="#" class="text-white hover:text-purple-200 transition-colors">
+                        <a href="https://instagram.com/osissman6_mdn" target="_blank" class="text-white hover:text-purple-200 transition-colors">
                             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.174-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.097.118.112.222.082.343-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.402.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.357-.629-2.748-1.378l-.748 2.853c-.271 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24.009 12.017 24.009c6.624 0 11.99-5.367 11.99-11.988C24.007 5.367 18.641.001.012.001z.017 0z" />
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                             </svg>
                         </a>
                     </div>
@@ -410,7 +486,7 @@
                     <div class="space-y-2 text-purple-100">
                         <p>📍 Jl. Ansari No.34, Medan, Sumatera Utara</p>
                         <p>📞 (+62) 821-8310-8567</p>
-                        <p>✉️ @osissman6_mdn</p>
+                        <p>📷 @osissman6_mdn</p>
                     </div>
                 </div>
                 <div>
