--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
             </p>
             <div class="flex flex-wrap justify-center sm:justify-start gap-2">
               <span class="bg-blue-100 text-blue-700 px-2 sm:px-3 py-1 rounded-full text-xs sm:text-sm font-semibold hover:scale-105 transition">
-                <i class="fas fa-star mr-1"></i> Sekolah Adiwiyata
+                <i class="fas fa-star mr-1"></i> Sekolah Berdampak
               </span>
               <span class="bg-green-100 text-green-700 px-2 sm:px-3 py-1 rounded-full text-xs sm:text-sm font-semibold hover:scale-105 transition">
-                <i class="fas fa-trophy mr-1"></i> Berprestasi Nasional
+                <i class="fas fa-trophy mr-1"></i> OSIS Informatif
               </span>
               <span class="bg-purple-100 text-purple-700 px-2 sm:px-3 py-1 rounded-full text-xs sm:text-sm font-semibold hover:scale-105 transition">
                 <i class="fas fa-heart mr-1"></i> Peduli Lingkungan
@@ -251,7 +251,7 @@
               <h3 class="text-xl font-bold text-gray-800">Visi OSIS</h3>
             </div>
             <p class="text-lg font-semibold text-blue-700 mb-4 italic">
-              "Mewujudkan OSIS SMA Negeri 6 Medan sebagai organisasi siswa yang unggul, berkarakter, dan berprestasi dalam membangun sekolah yang bermartabat"
+              "Mewujudkan organisasi yang peduli lingkungan, berorientasi pada kepentingan rakyat, menjunjung tinggi nilai-nilai kemanusiaan dan transparansi, serta menghadirkan program-program populis yang berdampak nyata bagi anggota dan masyarakat, dengan tetap menjaga integritas serta nilai luhur organisasi."
             </p>
             <div class="space-y-2">
               <div class="flex items-start">
