--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <h3 class="text-xl font-bold text-gray-800">Visi OSIS</h3>
             </div>
             <p class="text-lg font-semibold text-blue-700 mb-4 italic">
-              "Mewujudkan organisasi yang peduli lingkungan, berorientasi pada kepentingan rakyat, menjunjung tinggi nilai-nilai kemanusiaan dan transparansi, serta menghadirkan program-program populis yang berdampak nyata bagi anggota dan masyarakat, dengan tetap menjaga integritas serta nilai luhur organisasi."
+              "Mewujudkan organisasi yang peduli lingkungan, berorientasi pada kepentingan siswa, menjunjung tinggi nilai-nilai kemanusiaan dan transparansi, serta menghadirkan program-program populis yang berdampak nyata bagi anggota dan masyarakat, dengan tetap menjaga integritas serta nilai luhur organisasi."
             </p>
             <div class="space-y-2">
               <div class="flex items-start">
