--- a/index.html
+++ b/index.html
@@ -256,15 +256,19 @@
             <div class="space-y-2">
               <div class="flex items-start">
                 <i class="fas fa-check-circle text-green-500 mt-1 mr-3"></i>
-                <p class="text-gray-600">Mengembangkan potensi siswa secara optimal</p>
+                <p class="text-gray-600">Menghadirkan organisasi yang adil untuk semua</p>
               </div>
               <div class="flex items-start">
                 <i class="fas fa-check-circle text-green-500 mt-1 mr-3"></i>
-                <p class="text-gray-600">Menciptakan lingkungan sekolah yang kondusif</p>
+                <p class="text-gray-600">Menciptakan lingkungan sekolah yang berkelanjutan</p>
               </div>
               <div class="flex items-start">
                 <i class="fas fa-check-circle text-green-500 mt-1 mr-3"></i>
-                <p class="text-gray-600">Membangun karakter siswa yang berakhlak mulia</p>
+                <p class="text-gray-600">Membangun karakter siswa yang peduli lingkungan</p>
+                </div>
+              <div class="flex items-start">
+                <i class="fas fa-check-circle text-green-500 mt-1 mr-3"></i>
+                <p class="text-gray-600">Mewadahi potensi siswa sesuai kebutuhan</p>
               </div>
             </div>
           </div>
@@ -324,11 +328,11 @@
           <div class="text-xs sm:text-sm text-gray-600">Bidang Utama</div>
         </div>
         <div class="bg-white rounded-xl p-4 text-center shadow hover:shadow-md transition">
-          <div class="text-2xl sm:text-3xl font-bold text-purple-600 mb-1">12</div>
+          <div class="text-2xl sm:text-3xl font-bold text-purple-600 mb-1">54</div>
           <div class="text-xs sm:text-sm text-gray-600">Program Kerja</div>
         </div>
         <div class="bg-white rounded-xl p-4 text-center shadow hover:shadow-md transition">
-          <div class="text-2xl sm:text-3xl font-bold text-orange-600 mb-1">4</div>
+          <div class="text-2xl sm:text-3xl font-bold text-orange-600 mb-1">17</div>
           <div class="text-xs sm:text-sm text-gray-600">Ekstrakurikuler</div>
         </div>
       </div>
@@ -435,7 +439,7 @@
                 <img src="https://img.icons8.com/color/48/000000/mosque.png" alt="Keagamaan" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">MUHAMMAD ALI ZAIN</h4>
+                <h4 class="font-bold">MUHAMMAD HAIKAL</h4>
                 <p class="text-sm text-gray-600">Bidang Keagamaan</p>
               </div>
             </div>
@@ -446,7 +450,7 @@
                 <img src="https://img.icons8.com/color/48/000000/handshake.png" alt="Budi Pekerti" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">SITI AMINAH</h4>
+                <h4 class="font-bold">AULIA DHEA ZHAFIRA</h4>
                 <p class="text-sm text-gray-600">Bidang Budi Pekerti</p>
               </div>
             </div>
@@ -457,7 +461,7 @@
                 <img src="https://img.icons8.com/color/48/000000/shield.png" alt="Bela Negara" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">RIO FERNANDO</h4>
+                <h4 class="font-bold">SALSABILA PUTRI</h4>
                 <p class="text-sm text-gray-600">Bidang Bela Negara</p>
               </div>
             </div>
@@ -468,7 +472,7 @@
                 <img src="https://img.icons8.com/color/48/000000/trophy.png" alt="Prestasi" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">DEWI SARTIKA</h4>
+                <h4 class="font-bold">NUR QISTINA</h4>
                 <p class="text-sm text-gray-600">Bidang Prestasi</p>
               </div>
             </div>
@@ -479,7 +483,7 @@
                 <img src="https://img.icons8.com/color/48/000000/leaf.png" alt="Lingkungan" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">NUR HAYATI</h4>
+                <h4 class="font-bold">RIDHO PRATAMA</h4>
                 <p class="text-sm text-gray-600">Bidang Lingkungan</p>
               </div>
             </div>
@@ -490,7 +494,7 @@
                 <img src="https://img.icons8.com/color/48/000000/business.png" alt="Wirausaha" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">FARID ABDULLAH</h4>
+                <h4 class="font-bold">NARA UNZILA</h4>
                 <p class="text-sm text-gray-600">Bidang Wirausaha</p>
               </div>
             </div>
@@ -501,7 +505,7 @@
                 <img src="https://img.icons8.com/color/48/000000/heart-health.png" alt="Kesehatan" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">ANJANI PUTRI</h4>
+                <h4 class="font-bold">NAZWA ALMIRA</h4>
                 <p class="text-sm text-gray-600">Bidang Kesehatan</p>
               </div>
             </div>
@@ -512,7 +516,7 @@
                 <img src="https://img.icons8.com/color/48/000000/classical-music.png" alt="Seni Budaya" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">RAFLI AKBAR</h4>
+                <h4 class="font-bold">SYAHRUL RAMADHAN</h4>
                 <p class="text-sm text-gray-600">Bidang Seni & Budaya</p>
               </div>
             </div>
@@ -523,7 +527,7 @@
                 <img src="https://img.icons8.com/color/48/000000/camera.png" alt="Dokumentasi" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold">DINA AMALIA</h4>
+                <h4 class="font-bold">RENATA SIANTURI</h4>
                 <p class="text-sm text-gray-600">Bidang Dokumentasi & IT</p>
               </div>
             </div>
@@ -590,6 +594,24 @@
                 <p class="text-sm text-gray-600">Bendahara Umum</p>
               </div>
             </div>
+            <div class="text-center">
+              <div class="w-16 h-16 bg-yellow-500 rounded-full flex items-center justify-center mx-auto mb-2">
+                <img src="https://img.icons8.com/color/48/000000/money-bag.png" alt="Bendahara" class="w-10 h-10">
+              </div>
+              <div class="bg-yellow-100 rounded-lg p-3">
+                <h4 class="font-bold">AISYA FIDYA ROKHMA</h4>
+                <p class="text-sm text-gray-600">Wakil Sekretaris</p>
+              </div>
+            </div>
+            <div class="text-center">
+              <div class="w-16 h-16 bg-yellow-500 rounded-full flex items-center justify-center mx-auto mb-2">
+                <img src="https://img.icons8.com/color/48/000000/money-bag.png" alt="Bendahara" class="w-10 h-10">
+              </div>
+              <div class="bg-yellow-100 rounded-lg p-3">
+                <h4 class="font-bold">HANINDITA RIZQIAH FITRI</h4>
+                <p class="text-sm text-gray-600">Wakil Bendahara</p>
+              </div>
+            </div>
           </div>
 
           <!-- Level 4: Koordinator Bidang -->
@@ -600,7 +622,7 @@
                 <img src="https://img.icons8.com/color/48/000000/mosque.png" alt="Keagamaan" class="w-8 h-8">
               </div>
               <div class="bg-purple-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">MUHAMMAD ALI ZAIN</h4>
+                <h4 class="font-bold text-sm">MUHAMMAD HAIKAL</h4>
                 <p class="text-xs text-gray-600">Keagamaan</p>
               </div>
             </div>
@@ -611,7 +633,7 @@
                 <img src="https://img.icons8.com/color/48/000000/handshake.png" alt="Budi Pekerti" class="w-8 h-8">
               </div>
               <div class="bg-blue-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">SITI AMINAH</h4>
+                <h4 class="font-bold text-sm">AULIA DHEA ZHAFIRA</h4>
                 <p class="text-xs text-gray-600">Budi Pekerti</p>
               </div>
             </div>
@@ -622,7 +644,7 @@
                 <img src="https://img.icons8.com/color/48/000000/shield.png" alt="Bela Negara" class="w-8 h-8">
               </div>
               <div class="bg-red-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">RIO FERNANDO</h4>
+                <h4 class="font-bold text-sm">SALSABILA PUTRI</h4>
                 <p class="text-xs text-gray-600">Bela Negara</p>
               </div>
             </div>
@@ -633,7 +655,7 @@
                 <img src="https://img.icons8.com/color/48/000000/trophy.png" alt="Prestasi" class="w-8 h-8">
               </div>
               <div class="bg-green-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">DEWI SARTIKA</h4>
+                <h4 class="font-bold text-sm">NUR QISTINA</h4>
                 <p class="text-xs text-gray-600">Prestasi</p>
               </div>
             </div>
@@ -644,8 +666,8 @@
                 <img src="https://img.icons8.com/color/48/000000/leaf.png" alt="Lingkungan" class="w-8 h-8">
               </div>
               <div class="bg-teal-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">NUR HAYATI</h4>
-                <p class="text-xs text-gray-600">Lingkungan</p>
+                <h4 class="font-bold text-sm">RIDHO PRATAMA</h4>
+                <p class="text-xs text-gray-600">HAM & Lingkungan</p>
               </div>
             </div>
             
@@ -655,7 +677,7 @@
                 <img src="https://img.icons8.com/color/48/000000/business.png" alt="Wirausaha" class="w-8 h-8">
               </div>
               <div class="bg-orange-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">FARID ABDULLAH</h4>
+                <h4 class="font-bold text-sm">NARA UNZILA</h4>
                 <p class="text-xs text-gray-600">Wirausaha</p>
               </div>
             </div>
@@ -666,7 +688,7 @@
                 <img src="https://img.icons8.com/color/48/000000/heart-health.png" alt="Kesehatan" class="w-8 h-8">
               </div>
               <div class="bg-pink-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">ANJANI PUTRI</h4>
+                <h4 class="font-bold text-sm">NAZWA ALMIRA</h4>
                 <p class="text-xs text-gray-600">Kesehatan</p>
               </div>
             </div>
@@ -674,11 +696,22 @@
             <!-- Bidang 8 -->
             <div class="text-center">
               <div class="w-12 h-12 bg-indigo-500 rounded-full flex items-center justify-center mx-auto mb-2">
-                <img src="https://img.icons8.com/color/48/000000/classical-music.png" alt="Seni Budaya" class="w-8 h-8">
+                <img src="https://img.icons8.com/color/48/000000/classical-music.png" alt="Seni" class="w-8 h-8">
               </div>
               <div class="bg-indigo-100 rounded-lg p-2">
-                <h4 class="font-bold text-sm">RAFLI AKBAR</h4>
+                <h4 class="font-bold text-sm">SYAHRUL RAMADHAN</h4>
                 <p class="text-xs text-gray-600">Seni & Budaya</p>
+              </div>
+            </div>
+
+             <!-- Bidang 9 -->
+            <div class="text-center">
+              <div class="w-12 h-12 bg-indigo-500 rounded-full flex items-center justify-center mx-auto mb-2">
+                <img src="https://img.icons8.com/color/48/000000/camera.png" alt="DOKUMENTASI" class="w-8 h-8">
+              </div>
+              <div class="bg-indigo-100 rounded-lg p-2">
+                <h4 class="font-bold text-sm">RENATA SIANTURI</h4>
+                <p class="text-xs text-gray-600">Dokumentasi & IT</p>
               </div>
             </div>
           </div>
@@ -823,7 +856,7 @@
         <div class="card bg-white p-6 shadow-lg">
           <div class="flex justify-between items-start mb-4">
             <div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">Rapat Koordinasi OSIS</h3>
+              <h3 class="text-xl font-bold text-gray-800 mb-2">Rapat Tidur OSIS</h3>
               <div class="flex items-center text-sm text-gray-500 mb-3">
                 <i class="fas fa-calendar-alt mr-2"></i>
                 <span>15 Maret 2025</span>
@@ -834,7 +867,7 @@
             </div>
             <span class="bg-blue-100 text-blue-800 text-sm font-semibold px-3 py-1 rounded-full announcement-badge">Penting</span>
           </div>
-          <p class="text-gray-600 mb-4">Diberitahukan kepada seluruh pengurus OSIS untuk menghadiri rapat koordinasi bulanan yang akan dilaksanakan di Aula Sekolah.</p>
+          <p class="text-gray-600 mb-4">Diberitahukan kepada seluruh pengurus OSIS untuk menghadiri rapat tidur bulanan yang akan dilaksanakan di Lab Sekolah.</p>
           <div class="flex items-center justify-between">
             <div class="flex items-center text-sm text-gray-500">
               <i class="fas fa-user mr-2"></i>
@@ -871,7 +904,7 @@
         <div class="card bg-white p-6 shadow-lg">
           <div class="flex justify-between items-start mb-4">
             <div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">Hasil Seleksi Pengurus OSIS Baru</h3>
+              <h3 class="text-xl font-bold text-gray-800 mb-2">Siswa SMA Negeri 6 Medan Menikahi Tiang Listrik</h3>
               <div class="flex items-center text-sm text-gray-500 mb-3">
                 <i class="fas fa-calendar-alt mr-2"></i>
                 <span>10 Maret 2025</span>
@@ -879,7 +912,7 @@
             </div>
             <span class="bg-yellow-100 text-yellow-800 text-sm font-semibold px-3 py-1 rounded-full announcement-badge">Informasi</span>
           </div>
-          <p class="text-gray-600 mb-4">Pengumuman hasil seleksi calon pengurus OSIS periode 2025/2026 dapat dilihat di papan pengumuman sekolah dan website OSIS.</p>
+          <p class="text-gray-600 mb-4">Entah apa yang ada di pikirannya sampai menikahi tiang listrik. Mungkin SMA 6 terlalu brutal untuk dirinya.</p>
           <div class="flex items-center justify-between">
             <div class="flex items-center text-sm text-gray-500">
               <i class="fas fa-user mr-2"></i>
@@ -1079,7 +1112,7 @@
               <i class="fas fa-chevron-down transition-transform"></i>
             </button>
             <div class="faq-answer">
-              <p class="text-gray-600 mt-2">Pendaftaran calon pengurus OSIS dibuka setiap tahun pada bulan Mei. Siswa dapat mendaftar melalui wali kelas atau langsung ke ruang OSIS dengan melengkapi formulir pendaftaran.</p>
+              <p class="text-gray-600 mt-2">Pendaftaran calon pengurus OSIS dibuka setiap tahun pada bulan November. Siswa dapat mendaftar dengan melengkapi formulir pendaftaran yang akan disediakan.</p>
             </div>
           </div>
 
@@ -1089,7 +1122,7 @@
               <i class="fas fa-chevron-down transition-transform"></i>
             </button>
             <div class="faq-answer">
-              <p class="text-gray-600 mt-2">Siswa kelas X dan XI dengan IPK minimal 3.0, memiliki sikap dan perilaku yang baik, serta memiliki motivasi untuk berkontribusi bagi sekolah.</p>
+              <p class="text-gray-600 mt-2">Siswa kelas X dan XI yang memiliki sikap dan perilaku yang baik, serta memiliki motivasi untuk berkontribusi bagi sekolah.</p>
             </div>
           </div>
 
@@ -1099,7 +1132,7 @@
               <i class="fas fa-chevron-down transition-transform"></i>
             </button>
             <div class="faq-answer">
-              <p class="text-gray-600 mt-2">Rapat rutin dilaksanakan setiap hari Sabtu pukul 13:00 di ruang OSIS. Rapat khusus dapat dilaksanakan sesuai kebutuhan dengan pemberitahuan sebelumnya.</p>
+              <p class="text-gray-600 mt-2">Rapat dilaksanakan kebutuhan dengan pemberitahuan sebelumnya.</p>
             </div>
           </div>
 
