--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="space-y-2">
               <div class="flex items-start">
                 <i class="fas fa-check-circle text-green-500 mt-1 mr-3"></i>
-                <p class="text-gray-600">Menghadirkan organisasi yang adil untuk semua</p>
+                <p class="text-gray-600">Menghadirkan Organisasi aktif dan responsif untuk perubahan nyata.</p>
               </div>
               <div class="flex items-start">
                 <i class="fas fa-check-circle text-green-500 mt-1 mr-3"></i>
@@ -286,32 +286,62 @@
                 <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
                   <span class="text-purple-600 font-bold">1</span>
                 </div>
-                <p class="text-gray-600">Meningkatkan kualitas ibadah dan akhlak siswa melalui kegiatan keagamaan</p>
-              </div>
+                <p class="text-gray-600">Gerakan – Organisasi aktif dan responsif untuk perubahan nyata.</p>
+              </div> 
               <div class="flex items-start">
                 <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
                   <span class="text-purple-600 font-bold">2</span>
                 </div>
-                <p class="text-gray-600">Mengembangkan bakat dan minat siswa melalui kegiatan ekstrakurikuler</p>
+                <p class="text-gray-600">Ekologis – Program berkelanjutan untuk jaga lingkungan.</p>
               </div>
               <div class="flex items-start">
                 <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
                   <span class="text-purple-600 font-bold">3</span>
                 </div>
-                <p class="text-gray-600">Meningkatkan prestasi akademik dan non-akademik siswa</p>
+                <p class="text-gray-600">Mandiri – Anggota berdaya, percaya diri, pelopor perubahan.</p>
               </div>
               <div class="flex items-start">
                 <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
                   <span class="text-purple-600 font-bold">4</span>
                 </div>
-                <p class="text-gray-600">Membangun jiwa kepemimpinan dan entrepreneurship siswa</p>
+                <p class="text-gray-600">Aspiratif – Wadah terbuka, setiap aspirasi ditindaklanjuti.</p>
               </div>
               <div class="flex items-start">
                 <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
                   <span class="text-purple-600 font-bold">5</span>
                 </div>
-                <p class="text-gray-600">Menjalin hubungan baik antar siswa, guru, dan masyarakat</p>
+                <p class="text-gray-600">Reformis – Benahi sistem organisasi lebih profesional & transparan.</p>
               </div>
+              <div class="flex items-start">
+                <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                  <span class="text-purple-600 font-bold">6</span>
+                </div>
+                <p class="text-gray-600">Akomodatif – Ruang setara untuk partisipasi semua anggota.</p>
+              </div> 
+              <div class="flex items-start">
+                <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                  <span class="text-purple-600 font-bold">7</span>
+                </div>
+                <p class="text-gray-600">Kolaboratif – Kerja sama dengan berbagai pihak untuk program inklusif.</p>
+              </div> 
+              <div class="flex items-start">
+                <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                  <span class="text-purple-600 font-bold">8</span>
+                </div>
+                <p class="text-gray-600">Yakin Hijau – Budaya peduli lingkungan sebagai identitas modern.</p>
+              </div> 
+              <div class="flex items-start">
+                <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                  <span class="text-purple-600 font-bold">9</span>
+                </div>
+                <p class="text-gray-600">Adil – Tegakkan keadilan, tolak diskriminasi.</p>
+              </div> 
+              <div class="flex items-start">
+                <div class="w-8 h-8 bg-purple-100 rounded-full flex items-center justify-center mr-3 flex-shrink-0">
+                  <span class="text-purple-600 font-bold">10</span>
+                </div>
+                <p class="text-gray-600">Terbuka – Transparansi dalam komunikasi, anggaran, & keputusan.</p>
+              </div> 
             </div>
           </div>
         </div>
@@ -513,7 +543,7 @@
             <!-- Bidang 8: Sastra & Budaya -->
             <div class="flex items-center p-3 bg-indigo-50 rounded-lg structure-item">
               <div class="w-12 h-12 bg-indigo-100 rounded-full flex items-center justify-center mr-4">
-                <img src="https://img.icons8.com/color/48/000000/classical-music.png" alt="Seni Budaya" class="w-8 h-8">
+                <img src="https://img.icons8.com/color/48/paint-palette.png" alt="Seni Budaya" class="w-8 h-8">
               </div>
               <div>
                 <h4 class="font-bold">SYAHRUL RAMADHAN</h4>
@@ -696,7 +726,7 @@
             <!-- Bidang 8 -->
             <div class="text-center">
               <div class="w-12 h-12 bg-indigo-500 rounded-full flex items-center justify-center mx-auto mb-2">
-                <img src="https://img.icons8.com/color/48/000000/classical-music.png" alt="Seni" class="w-8 h-8">
+                <img src="https://img.icons8.com/color/48/paint-palette.png" alt="Seni" class="w-8 h-8">
               </div>
               <div class="bg-indigo-100 rounded-lg p-2">
                 <h4 class="font-bold text-sm">SYAHRUL RAMADHAN</h4>
@@ -810,7 +840,7 @@
             <span>Juni - Agustus 2025</span>
           </div>
           <div class="mt-3">
-            <span class="text-xs bg-red-100 text-red-800 px-2 py-1 rounded">Koordinator: SITI AMINAH</span>
+            <span class="text-xs bg-red-100 text-red-800 px-2 py-1 rounded">Koordinator: Mark Rutte</span>
           </div>
         </div>
 
@@ -1046,8 +1076,8 @@
                 <img src="https://img.icons8.com/color/48/000000/phone.png" alt="Telepon" class="w-8 h-8">
               </div>
               <div>
-                <h4 class="font-bold text-gray-800">Telepon Sekolah</h4>
-                <p class="text-gray-600">(061) 452 1234</p>
+                <h4 class="font-bold text-gray-800">Narahubung</h4>
+                <p class="text-gray-600">081234567890 (Tortor)</p>
               </div>
             </div>
 
@@ -1057,7 +1087,7 @@
               </div>
               <div>
                 <h4 class="font-bold text-gray-800">Jam Operasional</h4>
-                <p class="text-gray-600">Senin - Jumat: 07:30 - 16:00 WIB<br>Sabtu: 07:30 - 12:30 WIB</p>
+                <p class="text-gray-600">Senin - Jumat: 07:30 - 16:00 WIB<br></p>
               </div>
             </div>
           </div>
