--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="flex items-center space-x-4 mb-6 md:mb-0">
           <div class="bg-white p-3 rounded-full shadow-lg">
-            <img src="https://img.icons8.com/color/96/000000/school-building.png" alt="Logo Sekolah" class="w-16 h-16">
+            <img src="https://files.imagetourl.net/uploads/1766492013579-38f3c8fa-4743-4061-ad25-d6321174c2ef.png" alt="Logo Sekolah" class="w-16 h-16">
           </div>
           <div>
             <h1 class="text-3xl md:text-4xl font-bold">OSIS SMA Negeri 6 Medan</h1>
