--- a/index.html
+++ b/index.html
@@ -927,8 +927,10 @@
               <i class="fas fa-user mr-2"></i>
               <span>DEWI SARTIKA (Koord. Bidang Prestasi)</span>
             </div>
-            <a href="#" class="text-blue-600 hover:text-blue-800 text-sm font-medium">Baca Selengkapnya →</a>
-          </div>
+            <!-- Ganti "LINK_DISINI" dengan link asli nanti -->
+          <a href="LINK_DISINI" 
+           target="_blank" 
+         class="text-blue-600 hover:text-blue-800 text-sm font-medium hover:underline transition">Baca Selengkapnya →</a>
         </div>
 
         <div class="card bg-white p-6 shadow-lg">
