--- a/index.html
+++ b/index.html
@@ -928,11 +928,10 @@
               <span>DEWI SARTIKA (Koord. Bidang Prestasi)</span>
             </div>
             <!-- Ganti "LINK_DISINI" dengan link asli nanti -->
-          <a href="LINK_DISINI" 
+          <a href="https://docs.google.com/document/d/1YfNV5ggnUHp_aA66Pa8abKLBozGNmCmouIfjJkMzpaI/edit?usp=drivesdk" 
            target="_blank" 
          class="text-blue-600 hover:text-blue-800 text-sm font-medium hover:underline transition">Baca Selengkapnya →</a>
-        </div>
-
+          </div>
         <div class="card bg-white p-6 shadow-lg">
           <div class="flex justify-between items-start mb-4">
             <div>
