--- a/index.html
+++ b/index.html
@@ -932,6 +932,10 @@
            target="_blank" 
          class="text-blue-600 hover:text-blue-800 text-sm font-medium hover:underline transition">Baca Selengkapnya →</a>
           </div>
+
+          <div class="card bg-white p-6 shadow-lg">
+          <div class="flex justify-between items-start mb-4">
+            <div>
               <h3 class="text-xl font-bold text-gray-800 mb-2">Siswa SMA Negeri 6 Medan Menikahi Tiang Listrik</h3>
               <div class="flex items-center text-sm text-gray-500 mb-3">
                 <i class="fas fa-calendar-alt mr-2"></i>
