--- a/index.html
+++ b/index.html
@@ -936,19 +936,22 @@
           <div class="card bg-white p-6 shadow-lg">
           <div class="flex justify-between items-start mb-4">
             <div>
-              <h3 class="text-xl font-bold text-gray-800 mb-2">Siswa SMA Negeri 6 Medan Menikahi Tiang Listrik</h3>
+              <h3 class="text-xl font-bold text-gray-800 mb-2">Rapat Tidur OSIS</h3>
               <div class="flex items-center text-sm text-gray-500 mb-3">
                 <i class="fas fa-calendar-alt mr-2"></i>
-                <span>10 Maret 2025</span>
+                <span>15 Maret 2025</span>
+                <span class="mx-2">•</span>
+                <i class="fas fa-clock mr-2"></i>
+                <span>13:00 - 15:00 WIB</span>
               </div>
             </div>
-            <span class="bg-yellow-100 text-yellow-800 text-sm font-semibold px-3 py-1 rounded-full announcement-badge">Informasi</span>
+            <span class="bg-blue-100 text-blue-800 text-sm font-semibold px-3 py-1 rounded-full announcement-badge">Penting</span>
           </div>
-          <p class="text-gray-600 mb-4">Entah apa yang ada di pikirannya sampai menikahi tiang listrik. Mungkin SMA 6 terlalu brutal untuk dirinya.</p>
+          <p class="text-gray-600 mb-4">Diberitahukan kepada seluruh pengurus OSIS untuk menghadiri rapat tidur bulanan yang akan dilaksanakan di Lab Sekolah.</p>
           <div class="flex items-center justify-between">
             <div class="flex items-center text-sm text-gray-500">
               <i class="fas fa-user mr-2"></i>
-              <span>NAUFAL RAIHAN (Ketua OSIS)</span>
+              <span>Dr. Sabhagiri</span>
             </div>
             <a href="#" class="text-blue-600 hover:text-blue-800 text-sm font-medium">Lihat Hasil →</a>
           </div>
