--- a/index.html
+++ b/index.html
@@ -932,8 +932,8 @@
            target="_blank" 
          class="text-blue-600 hover:text-blue-800 text-sm font-medium hover:underline transition">Baca Selengkapnya →</a>
           </div>
-
-          <div class="card bg-white p-6 shadow-lg">
+          <div class="space-y-6">
+        <div class="card bg-white p-6 shadow-lg">
           <div class="flex justify-between items-start mb-4">
             <div>
               <h3 class="text-xl font-bold text-gray-800 mb-2">Rapat Tidur OSIS</h3>
@@ -951,9 +951,9 @@
           <div class="flex items-center justify-between">
             <div class="flex items-center text-sm text-gray-500">
               <i class="fas fa-user mr-2"></i>
-              <span>Dr. Sabhagiri</span>
+              <span>Dra. Hj. Iba Sabirin (Pembina OSIS)</span>
             </div>
-            <a href="#" class="text-blue-600 hover:text-blue-800 text-sm font-medium">Lihat Hasil →</a>
+            <a href="#" class="text-blue-600 hover:text-blue-800 text-sm font-medium">Baca Selengkapnya →</a>
           </div>
         </div>
       </div>
