--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
               </div>
               <div>
                 <h4 class="font-bold text-gray-800">Email OSIS</h4>
-                <p class="text-gray-600 mb-2">osis@sman6medan.sch.id</p>
+                <p class="text-gray-600 mb-2">sman6.medan@gmail.com</p>
                 <button class="copy-email bg-gray-100 hover:bg-gray-200 text-gray-800 px-3 py-1 rounded text-sm transition">
                   <i class="fas fa-copy mr-1"></i>Salin Email
                 </button>
