--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,13 @@
         <div class="card bg-white p-6 shadow-lg">
           <h3 class="text-xl font-bold text-gray-800 mb-6">Kirim Pesan</h3>
           
-          <form id="contact-form" class="space-y-4">
+          <form id="contact-form" action="https://formspree.io/f/xykkknge" method="POST" class="space-y-4">
+
+            <!-- Tambahkan di sini, sebelum tombol submit -->
+        <input type="text" name="_gotcha" style="display:none">
+        <input type="hidden" name="_subject" value="Pesan Baru dari Website OSIS">
+        <input type="hidden" name="_template" value="table">
+            
             <div>
               <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Nama Lengkap</label>
               <input type="text" id="name" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
