--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
 
         <div class="card bg-white p-4 shadow-lg">
           <div class="bg-gradient-to-br from-indigo-100 to-indigo-200 h-48 rounded-lg flex items-center justify-center mb-4">
-            <img src="https://img.icons8.com/color/96/000000/graduation-cap.png" alt="Seminar" class="w-16 h-16">
+            <img src="https://image2url.com/r2/default/images/1769840295849-290835a1-86e8-4466-932d-5c275fd6030f.jpg" alt="Seminar" class="w-16 h-16">
           </div>
           <h3 class="text-lg font-bold text-gray-800 mb-2">Seminar Motivasi</h3>
           <p class="text-gray-600 text-sm mb-3">Seminar motivasi belajar untuk siswa kelas XII.</p>
